--- a/Pages/print.html
+++ b/Pages/print.html
@@ -45,60 +45,170 @@
         </div>
         <div class="back-card">
             <div class="card">
-                <h2>Groupe Vocal des Pays du Der</h2>
+                <h2>Groupe Vocal des Pays du Der<br>Noël 2019</h2>
                 <div class="slideshow-container" id="slide">
                     <div class="mySlides fade">
-                        <img id="myImg3" onclick="clickNext('myImg3')"
+                        <img id="myImg18" onclick="clickNext('myImg18')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
                             title="Affiche" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg4" onclick="clickNext('myImg4')"
+                        <img id="myImg19" onclick="clickNext('myImg19')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg5" onclick="clickNext('myImg5')"
+                        <img id="myImg20" onclick="clickNext('myImg20')"
                             src="../Images/Print/Concert Noël 2019/Programme concert Noël 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide,-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(slide,1)">&#10095;</a>
                     <div class="dots" style="text-align:center">
-                        <span class="dot active" onclick="currentSlide(slide,0)"></span>
-                        <span class="dot" onclick="currentSlide(slide,1)"></span>
+                        <span class="dot active" onclick="currentSlide(slide,1)"></span>
                         <span class="dot" onclick="currentSlide(slide,2)"></span>
+                        <span class="dot" onclick="currentSlide(slide,3)"></span>
                     </div>
                 </div>
                 <p>Affiche et programme pour le concert de Noël 2019</p>
             </div>
             <div class="card">
-                <h2>Groupe Vocal des Pays du Der</h2>
+                <h2>Groupe Vocal des Pays du Der<br>8 juin 2019</h2>
                 <div class="slideshow-container" id="slide1">
                     <div class="mySlides fade">
-                        <img id="myImg" onclick="clickNext('myImg')"
+                        <img id="myImg15" onclick="clickNext('myImg15')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
                             alt="Affiche GVPD" title="Affiche" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg1" onclick="clickNext('myImg1')"
+                        <img id="myImg16" onclick="clickNext('myImg16')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-1.png"
                             alt="Programme GVPD" title="Programme R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
-                        <img id="myImg2" onclick="clickNext('myImg2')"
+                        <img id="myImg17" onclick="clickNext('myImg17')"
                             src="../Images/Print/Concert 8 juin 2019/Programme concert 8 Juin 2019-2.png"
                             alt="Programme GVPD" title="Programme V°" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide1,-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(slide1,1)">&#10095;</a>
                     <div class="dots" style="text-align:center">
-                        <span class="dot active" onclick="currentSlide(slide1,0)"></span>
-                        <span class="dot" onclick="currentSlide(slide1,1)"></span>
+                        <span class="dot active" onclick="currentSlide(slide1,1)"></span>
                         <span class="dot" onclick="currentSlide(slide1,2)"></span>
+                        <span class="dot" onclick="currentSlide(slide1,3)"></span>
                     </div>
                 </div>
                 <p>Affiche et programme pour le concert du 8 juin 2019</p>
+            </div>
+            <div class="card">
+                <h2>Groupe Vocal des Pays du Der<br>Noël 2018</h2>
+                <div class="slideshow-container" id="slide2">
+                    <div class="mySlides fade">
+                        <img id="myImg12" onclick="clickNext('myImg12')"
+                            src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
+                            alt="Affiche GVPD" title="Affiche" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg13" onclick="clickNext('myImg13')"
+                            src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-1.png"
+                            alt="Programme GVPD" title="Programme R°" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg14" onclick="clickNext('myImg14')"
+                            src="../Images/Print/Concert Noël 2018/Programme concert Noël 2018-2.png"
+                            alt="Programme GVPD" title="Programme V°" style="min-width:100%">
+                    </div>
+                    <a class="prev" onclick="plusSlides(slide2,-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(slide2,1)">&#10095;</a>
+                    <div class="dots" style="text-align:center">
+                        <span class="dot active" onclick="currentSlide(slide2,1)"></span>
+                        <span class="dot" onclick="currentSlide(slide2,2)"></span>
+                        <span class="dot" onclick="currentSlide(slide2,3)"></span>
+                    </div>
+                </div>
+                <p>Affiche et programme pour le concert de Noël 2018</p>
+            </div>
+            <div class="card">
+                <h2>Faire part et livret de messe<br>Luu Nha L.</h2>
+                <div class="slideshow-container" id="slide3">
+                    <div class="mySlides fade">
+                        <img id="myImg" onclick="clickNext('myImg')"
+                            src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (1).png"
+                            alt="Faire Part Luu Nha L" title="Faire part R°" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg1" onclick="clickNext('myImg1')"
+                            src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (2).png"
+                            alt="Faire Part Luu Nha L" title="Faire part V°" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg2" onclick="clickNext('myImg2')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (1).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 1" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg3" onclick="clickNext('myImg3')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (2).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 3" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg4" onclick="clickNext('myImg4')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (3).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 4" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg5" onclick="clickNext('myImg5')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (4).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 5" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg6" onclick="clickNext('myImg6')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (5).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 6" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg7" onclick="clickNext('myImg7')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (6).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 7" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg8" onclick="clickNext('myImg8')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (7).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 8" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg9" onclick="clickNext('myImg9')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (8).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 9" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg10" onclick="clickNext('myImg10')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (9).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 10" style="min-width:100%">
+                    </div>
+                    <div class="mySlides fade dnone">
+                        <img id="myImg11" onclick="clickNext('myImg11')"
+                            src="../Images/Print/Baptême Luu Nha L/Livret baptême Luu Nha L. (10).png"
+                            alt="Livret de messe Luu Nha L" title="Livret de messe page 11" style="min-width:100%">
+                    </div>
+                    <a class="prev" onclick="plusSlides(slide3,-1)">&#10094;</a>
+                    <a class="next" onclick="plusSlides(slide3,1)">&#10095;</a>
+                    <div class="dots" style="text-align:center">
+                        <span class="dot active" onclick="currentSlide(slide3,1)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,2)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,3)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,4)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,5)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,6)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,7)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,8)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,9)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,10)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,11)"></span>
+                        <span class="dot" onclick="currentSlide(slide3,12)"></span>
+                    </div>
+                </div>
+                <p>Faire part et livret de messe pour le baptême de Luu Nha L.</p>
             </div>
             <div id="myModal" class="modal">
                 <span class="close">&times;</span>
