--- a/Pages/print.html
+++ b/Pages/print.html
@@ -50,7 +50,7 @@
                     <div class="mySlides fade">
                         <img id="myImg18" onclick="clickNext('myImg18')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
-                            title="Affiche" style="min-width:100%">
+                            title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg19" onclick="clickNext('myImg19')"
@@ -78,7 +78,7 @@
                     <div class="mySlides fade">
                         <img id="myImg15" onclick="clickNext('myImg15')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
-                            alt="Affiche GVPD" title="Affiche" style="min-width:100%">
+                            alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg16" onclick="clickNext('myImg16')"
@@ -106,7 +106,7 @@
                     <div class="mySlides fade">
                         <img id="myImg12" onclick="clickNext('myImg12')"
                             src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
-                            alt="Affiche GVPD" title="Affiche" style="min-width:100%">
+                            alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg13" onclick="clickNext('myImg13')"
