--- a/Pages/print.html
+++ b/Pages/print.html
@@ -218,7 +218,7 @@
             </div>
         </div>
         <!-- FIN WORK -->
-        <script src="app.js"></script>
+        <script src="app.js" defer></script>
     </body>
 
     <footer class="foot">
