--- a/Pages/web.html
+++ b/Pages/web.html
@@ -95,7 +95,7 @@
             </div>
         </div>
         <!-- FIN WORK -->
-        <script src="app.js"></script>
+        <script src="app.js" defer></script>
     </body>
 
     <footer class="foot">
