--- a/Pages/print.html
+++ b/Pages/print.html
@@ -129,7 +129,7 @@
                 <p>Affiche et programme pour le concert de Noël 2018</p>
             </div>
             <div class="card">
-                <h2>Faire part et livret de messe<br>Luu Nha L.</h2>
+                <h2>Luu Nha L.</h2>
                 <div class="slideshow-container" id="slide3">
                     <div class="mySlides fade">
                         <img id="myImg" onclick="clickNext('myImg')"
