--- a/Pages/print.html
+++ b/Pages/print.html
@@ -262,9 +262,9 @@
                             src="../Images/Print/MCD Communication/Carte voeux 2013.png"
                             alt="Carte de voeux" title="Carte de voeux" style="min-width:100%">
                     </div>
-                    <!-- <div class="mySlides fade">
+                    <div class="mySlides fade">
                         <img id="myImg24" onclick="clickNext('myImg24')"
-                            src="../Images/Print/"
+                            src="../Images/Print/MCD Communication/Carte voeux 2013.png"
                             alt="Carte de voeux" title="Carte de voeux" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide6,-1)">&#10094;</a>
@@ -272,7 +272,7 @@
                     <div class="dots" style="text-align:center">
                         <span class="dot active" onclick="currentSlide(slide6,1)"></span>
                         <span class="dot" onclick="currentSlide(slide6,2)"></span>
-                    </div> -->
+                    </div>
                 </div>
                 <p>Carte de voeux avec vernis 3D</p>
             </div>
