--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,62 @@
     <title>Pauline Pierson - Qui suis-je ?</title>
     <link rel="icon" type="image/x-icon" href="../Images/Favicon/PP.png">
 </head>
-<body>
-    
-</body>
+
+<div class="container">
+
+    <body>
+        <!-- HEADER -->
+        <div class="header">
+            <div class="PP">
+                <a href="../index.html">
+                    <h1>Pauline Pierson</h1>
+                </a>
+            </div>
+            <div class="onglet">
+                <a href="../Pages/print.html">
+                    <div class="rond" id="print">
+                        <h3>Print</h3>
+                    </div>
+                </a>
+                <a href="../Pages/web.html">
+                    <div class="rond" id="web">
+                        <h3>Web</h3>
+                    </div>
+                </a>
+                <a href="../Pages/contact.html">
+                    <div class="rond" id="contact">
+                        <h3>Contact</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <!-- FIN HEADER -->
+        <div class="bandeau" id="b-f">
+            <h2>Qui suis-je?</h2>
+        </div>
+        <div class="back-f">
+            <p>Test</p>
+            <p>TEST</p>
+            <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank">
+                <img src="../Images/WhoamI/Logo LinkedIn noir.png" alt="LinkedIn">
+            </a>
+            <a href="https://github.com/Pooh5159" target="_blank">
+                <img src="../Images/WhoamI/github.png" alt="GitHub">
+            </a>
+            <a href="../Images/WhoamI/CV.pdf" target="_blank" title="CV">
+                <button>Voir CV</button>
+            </a>
+        </div>
+
+    </body>
+
+    <footer class="foot">
+        <a href="../Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
+        <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
+    </footer>
+
+</div>
+
 </html>
