--- a/Pages/print.html
+++ b/Pages/print.html
@@ -46,7 +46,7 @@
         <div class="back-card">
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2019</h2>
-                <div class="slideshow-container" id="slide">
+                <div class="slideshow-container thisSlide" id="slide">
                     <div class="mySlides fade">
                         <img id="myImg47" onclick="clickNext('myImg47')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
@@ -74,7 +74,7 @@
             </div>
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>8 juin 2019</h2>
-                <div class="slideshow-container" id="slide1">
+                <div class="slideshow-container thisSlide" id="slide1">
                     <div class="mySlides fade">
                         <img id="myImg44" onclick="clickNext('myImg44')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
@@ -102,11 +102,11 @@
             </div>
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2018</h2>
-                <div class="slideshow-container" id="slide2">
+                <div class="slideshow-container thisSlide" id="slide2">
                     <div class="mySlides fade">
                         <img id="myImg41" onclick="clickNext('myImg41')"
-                            src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
-                            alt="Affiche GVPD" title="Affiche A4" style="min-width:100%">
+                            src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png" alt="Affiche GVPD"
+                            title="Affiche A4" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg42" onclick="clickNext('myImg42')"
@@ -130,7 +130,7 @@
             </div>
             <div class="card">
                 <h2>Luu Nha L.</h2>
-                <div class="slideshow-container" id="slide3">
+                <div class="slideshow-container thisSlide" id="slide3">
                     <div class="mySlides fade">
                         <img id="myImg29" onclick="clickNext('myImg29')"
                             src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (1).png"
@@ -212,16 +212,16 @@
             </div>
             <div class="card">
                 <h2>Léna P.</h2>
-                <div class="slideshow-container" id="slide4">
+                <div class="slideshow-container thisSlide" id="slide4">
                     <div class="mySlides fade">
                         <img id="myImg27" onclick="clickNext('myImg27')"
-                            src="../Images/Print/Faire part Léna P/Faire part Léna final-1.jpg"
-                            alt="Faire part Léna P." title="Faire part R°" style="min-width:100%">
+                            src="../Images/Print/Faire part Léna P/Faire part Léna final-1.jpg" alt="Faire part Léna P."
+                            title="Faire part R°" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg28" onclick="clickNext('myImg28')"
-                            src="../Images/Print/Faire part Léna P/Faire part Léna final-2.jpg"
-                            alt="Faire part Léna P." title="Faire part V°" style="min-width:100%">
+                            src="../Images/Print/Faire part Léna P/Faire part Léna final-2.jpg" alt="Faire part Léna P."
+                            title="Faire part V°" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide4,-1)">&#10094;</a>
                     <a class="next" onclick="plusSlides(slide4,1)">&#10095;</a>
@@ -234,7 +234,7 @@
             </div>
             <div class="card">
                 <h2>Éthan D.</h2>
-                <div class="slideshow-container" id="slide5">
+                <div class="slideshow-container thisSlide" id="slide5">
                     <div class="mySlides fade">
                         <img id="myImg25" onclick="clickNext('myImg25')"
                             src="../Images/Print/Faire part Ethan D/Faire part Ethan D (1).jpg"
@@ -256,15 +256,15 @@
             </div>
             <div class="card">
                 <h2>MCD Communication</h2>
-                <div class="slideshow-container" id="slide6">
+                <div class="slideshow-container thisSlide" id="slide6">
                     <div class="mySlides fade">
                         <img id="myImg23" onclick="clickNext('myImg23')"
-                            src="../Images/Print/MCD Communication/Carte voeux 2013.png"
-                            alt="Carte de voeux" title="Carte de voeux" style="min-width:100%">
+                            src="../Images/Print/MCD Communication/Carte voeux 2013.png" alt="Carte de voeux"
+                            title="Carte de voeux" style="min-width:100%">
                     </div>
-                    <div class="mySlides fade">
+                    <!-- <div class="mySlides fade">
                         <img id="myImg24" onclick="clickNext('myImg24')"
-                            src="../Images/Print/MCD Communication/Carte voeux 2013.png"
+                            src="../Images/Print/"
                             alt="Carte de voeux" title="Carte de voeux" style="min-width:100%">
                     </div>
                     <a class="prev" onclick="plusSlides(slide6,-1)">&#10094;</a>
@@ -272,17 +272,17 @@
                     <div class="dots" style="text-align:center">
                         <span class="dot active" onclick="currentSlide(slide6,1)"></span>
                         <span class="dot" onclick="currentSlide(slide6,2)"></span>
-                    </div>
+                    </div> -->
                 </div>
                 <p>Carte de voeux avec vernis 3D</p>
             </div>
             <div class="card">
                 <h2>Le Comptoir de Toamasina</h2>
-                <div class="slideshow-container" id="slide7">
+                <div class="slideshow-container thisSlide" id="slide7">
                     <div class="mySlides fade">
                         <img id="myImg2" onclick="clickNext('myImg2')"
-                            src="../Images/Print/Le Comptoir de Toamasina/LOGO.jpg"
-                            alt="Le Comptoir de Toamasina Logo" title="Logo" style="min-width:100%">
+                            src="../Images/Print/Le Comptoir de Toamasina/LOGO.jpg" alt="Le Comptoir de Toamasina Logo"
+                            title="Logo" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg3" onclick="clickNext('myImg3')"
@@ -297,87 +297,104 @@
                     <div class="mySlides fade dnone">
                         <img id="myImg5" onclick="clickNext('myImg5')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CAFÉ.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Café" title="Étiquette Extrait de Café" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Café" title="Étiquette Extrait de Café"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg6" onclick="clickNext('myImg6')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CANNELLE.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Cannelle" title="Étiquette Extrait de Cannelle" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Cannelle" title="Étiquette Extrait de Cannelle"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg7" onclick="clickNext('myImg7')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT CITRON.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Citron" title="Étiquette Extrait de Citron" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Citron" title="Étiquette Extrait de Citron"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg8" onclick="clickNext('myImg8')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FLEUR D'ORANGER.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Fleur d'oranger" title="Étiquette Extrait de Fleur d'oranger" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Fleur d'oranger"
+                            title="Étiquette Extrait de Fleur d'oranger" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg9" onclick="clickNext('myImg9')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT FRAMBOISE.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Framboise" title="Étiquette Extrait de Framboise" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Framboise" title="Étiquette Extrait de Framboise"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg10" onclick="clickNext('myImg10')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT ROSE.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Rose" title="Étiquette Extrait de Rose" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Rose" title="Étiquette Extrait de Rose"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg11" onclick="clickNext('myImg11')"
                             src="../Images/Print/Le Comptoir de Toamasina/EXTRAIT VANILLE.jpg"
-                            alt="Le Comptoir de Toamasina Extrait Vanille" title="Étiquette Extrait de Vanille" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Extrait Vanille" title="Étiquette Extrait de Vanille"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg12" onclick="clickNext('myImg12')"
                             src="../Images/Print/Le Comptoir de Toamasina/GOUSSES VANILLE.jpg"
-                            alt="Le Comptoir de Toamasina Gousse Vanille" title="Étiquette Gousses de Vanille" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Gousse Vanille" title="Étiquette Gousses de Vanille"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg13" onclick="clickNext('myImg13')"
                             src="../Images/Print/Le Comptoir de Toamasina/POIVRE BLANC.jpg"
-                            alt="Le Comptoir de Toamasina Poivre Blanc" title="Étiquette Poivre Blanc" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Poivre Blanc" title="Étiquette Poivre Blanc"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg14" onclick="clickNext('myImg14')"
                             src="../Images/Print/Le Comptoir de Toamasina/POIVRE CUBEBE.jpg"
-                            alt="Le Comptoir de Toamasina Poivre Cubèbe" title="Étiquette Poivre Cubèbe" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Poivre Cubèbe" title="Étiquette Poivre Cubèbe"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg15" onclick="clickNext('myImg15')"
                             src="../Images/Print/Le Comptoir de Toamasina/POIVRE LONG FRUIT.jpg"
-                            alt="Le Comptoir de Toamasina Poivre Long Fruit" title="Étiquette Poivre Long Fruit" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Poivre Long Fruit" title="Étiquette Poivre Long Fruit"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg16" onclick="clickNext('myImg16')"
                             src="../Images/Print/Le Comptoir de Toamasina/POIVRE NOIR.jpg"
-                            alt="Le Comptoir de Toamasina Poivre Noir" title="Étiquette Poivre Noir" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Poivre Noir" title="Étiquette Poivre Noir"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg17" onclick="clickNext('myImg17')"
                             src="../Images/Print/Le Comptoir de Toamasina/POIVRE PIMENT DE JAMAÏQUE.jpg"
-                            alt="Le Comptoir de Toamasina Poivre Piment de Jamaïque" title="Étiquette Poivre Piment de Jamaïque" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Poivre Piment de Jamaïque"
+                            title="Étiquette Poivre Piment de Jamaïque" style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg18" onclick="clickNext('myImg18')"
                             src="../Images/Print/Le Comptoir de Toamasina/SUCRE CANNELLE.jpg"
-                            alt="Le Comptoir de Toamasina Sucre Cannelle" title="Étiquette Sucre à la Cannelle" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Sucre Cannelle" title="Étiquette Sucre à la Cannelle"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg19" onclick="clickNext('myImg19')"
                             src="../Images/Print/Le Comptoir de Toamasina/SUCRE CITRON.jpg"
-                            alt="Le Comptoir de Toamasina Sucre Citron" title="Étiquette Sucre au Citron" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Sucre Citron" title="Étiquette Sucre au Citron"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg20" onclick="clickNext('myImg20')"
                             src="../Images/Print/Le Comptoir de Toamasina/SUCRE ORANGE.jpg"
-                            alt="Le Comptoir de Toamasina Sucre Orange" title="Étiquette Sucre à l'Orange" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Sucre Orange" title="Étiquette Sucre à l'Orange"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg21" onclick="clickNext('myImg21')"
                             src="../Images/Print/Le Comptoir de Toamasina/SUCRE VANILLE.jpg"
-                            alt="Le Comptoir de Toamasina Sucre Vanille" title="Étiquette Sucre à la Vanille" style="min-width:100%">
+                            alt="Le Comptoir de Toamasina Sucre Vanille" title="Étiquette Sucre à la Vanille"
+                            style="min-width:100%">
                     </div>
                     <div class="mySlides fade dnone">
                         <img id="myImg22" onclick="clickNext('myImg22')"
@@ -415,7 +432,7 @@
             </div>
             <div class="card">
                 <h2>Baptiste L.</h2>
-                <div class="slideshow-container" id="slide8">
+                <div class="slideshow-container thisSlide" id="slide8">
                     <div class="mySlides fade">
                         <img id="myImg" onclick="clickNext('myImg')"
                             src="../Images/Print/Faire part Baptiste L/faire part Baptiste L (1).jpg"
@@ -436,7 +453,7 @@
                 <p>Faire part de naissance de Baptiste L.</p>
             </div>
             <div id="myModal" class="modal">
-                <span class="close">&times;</span>
+                <span onclick="closeModal()" class="close">&times;</span>
                 <img class="modal-content zoom" id="img">
                 <video controls autoplay class="modal-content zoom" id="video"></video>
                 <div id="caption"></div>
