new slider script

--- a/Pages/print.html
+++ b/Pages/print.html
@@ -46,7 +46,7 @@
         <div class="back-card">
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2019</h2>
-                <div class="slideshow-container" id="slide">
+                <div class="slideshow-container thisSlide" id="slide">
                     <div class="mySlides fade">
                         <img id="myImg47" onclick="clickNext('myImg47')"
                             src="../Images/Print/Concert Noël 2019/Affiche Noël 2019-1.png" alt="Affiche GVPD"
@@ -74,7 +74,7 @@
             </div>
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>8 juin 2019</h2>
-                <div class="slideshow-container" id="slide1">
+                <div class="slideshow-container thisSlide" id="slide1">
                     <div class="mySlides fade">
                         <img id="myImg44" onclick="clickNext('myImg44')"
                             src="../Images/Print/Concert 8 juin 2019/Affiche concert 8 juin 2019-1.png"
@@ -102,7 +102,7 @@
             </div>
             <div class="card">
                 <h2>Groupe Vocal des Pays du Der<br>Noël 2018</h2>
-                <div class="slideshow-container" id="slide2">
+                <div class="slideshow-container thisSlide" id="slide2">
                     <div class="mySlides fade">
                         <img id="myImg41" onclick="clickNext('myImg41')"
                             src="../Images/Print/Concert Noël 2018/Affiche concert Noël 2018-1.png"
@@ -130,7 +130,7 @@
             </div>
             <div class="card">
                 <h2>Luu Nha L.</h2>
-                <div class="slideshow-container" id="slide3">
+                <div class="slideshow-container thisSlide" id="slide3">
                     <div class="mySlides fade">
                         <img id="myImg29" onclick="clickNext('myImg29')"
                             src="../Images/Print/Baptême Luu Nha L/Faire part Luu Nha L (1).png"
@@ -212,7 +212,7 @@
             </div>
             <div class="card">
                 <h2>Léna P.</h2>
-                <div class="slideshow-container" id="slide4">
+                <div class="slideshow-container thisSlide" id="slide4">
                     <div class="mySlides fade">
                         <img id="myImg27" onclick="clickNext('myImg27')"
                             src="../Images/Print/Faire part Léna P/Faire part Léna final-1.jpg"
@@ -234,7 +234,7 @@
             </div>
             <div class="card">
                 <h2>Éthan D.</h2>
-                <div class="slideshow-container" id="slide5">
+                <div class="slideshow-container thisSlide" id="slide5">
                     <div class="mySlides fade">
                         <img id="myImg25" onclick="clickNext('myImg25')"
                             src="../Images/Print/Faire part Ethan D/Faire part Ethan D (1).jpg"
@@ -256,7 +256,7 @@
             </div>
             <div class="card">
                 <h2>MCD Communication</h2>
-                <div class="slideshow-container" id="slide6">
+                <div class="slideshow-container thisSlide" id="slide6">
                     <div class="mySlides fade">
                         <img id="myImg23" onclick="clickNext('myImg23')"
                             src="../Images/Print/MCD Communication/Carte voeux 2013.png"
@@ -278,7 +278,7 @@
             </div>
             <div class="card">
                 <h2>Le Comptoir de Toamasina</h2>
-                <div class="slideshow-container" id="slide7">
+                <div class="slideshow-container thisSlide" id="slide7">
                     <div class="mySlides fade">
                         <img id="myImg2" onclick="clickNext('myImg2')"
                             src="../Images/Print/Le Comptoir de Toamasina/LOGO.jpg"
@@ -415,7 +415,7 @@
             </div>
             <div class="card">
                 <h2>Baptiste L.</h2>
-                <div class="slideshow-container" id="slide8">
+                <div class="slideshow-container thisSlide" id="slide8">
                     <div class="mySlides fade">
                         <img id="myImg" onclick="clickNext('myImg')"
                             src="../Images/Print/Faire part Baptiste L/faire part Baptiste L (1).jpg"
