--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -40,20 +40,55 @@
         </div>
         <!-- FIN HEADER -->
         <div class="bandeau" id="b-f">
-            <h2>Qui suis-je?</h2>
+            <h2>Qui suis-je ?</h2>
         </div>
         <div class="back-f">
-            <p>Test</p>
-            <p>TEST</p>
-            <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank">
-                <img src="../Images/WhoamI/Logo LinkedIn noir.png" alt="LinkedIn">
-            </a>
-            <a href="https://github.com/Pooh5159" target="_blank">
-                <img src="../Images/WhoamI/github.png" alt="GitHub">
-            </a>
-            <a href="../Images/WhoamI/CV.pdf" target="_blank" title="CV">
-                <button>Voir CV</button>
-            </a>
+            <div class="row">
+                <div class="col">
+                    <h3>Présentation</h3>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, fuga.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque ipsum porro nemo
+                        laudantium, animi accusantium voluptate cumque vero eum!</p>
+                    <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank">
+                        <img src="../Images/WhoamI/Logo LinkedIn noir.png" alt="LinkedIn" title="LinkedIn">
+                    </a>
+                    <a href="https://github.com/Pooh5159" target="_blank">
+                        <img src="../Images/WhoamI/github.png" alt="GitHub" title="GitHub">
+                    </a>
+                    <a href="../Images/WhoamI/CV.pdf" target="_blank" alt="CV" title="CV">
+                        <button>Voir CV</button>
+                    </a>
+                </div>
+                <div class="col">
+                    <h3>Compétences</h3>
+                    <ul>
+                        <li>Organisée</li>
+                        <li>Autonome</li>
+                        <li>Rigoureuse</li>
+                        <li>Analyse des besoins client</li>
+                        <li>Réalisation de supports de communication</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col lanlog">
+                    <h3>Logiciels</h3>
+                    <img src="../Images/WhoamI/Logo Indesign.png" alt="Id">
+                    <img src="../Images/WhoamI/Logo Ilustrator.png" alt="Ai">
+                    <img src="../Images/WhoamI/Logo Photoshop.png" alt="Ps">
+                    <img src="../Images/WhoamI/Visual_Studio_Code_1.35_icon.svg.png" alt="VSC">
+                    <img src="../Images/WhoamI/Logo Pack Office.png" alt="Office">
+                    <img src="../Images/WhoamI/figma_logo_icon_170157.png" alt="Figma">
+                    <img src="../Images/WhoamI/wordpress-logo-29017.png" alt="Wordpress">
+                </div>
+                <div class="col lanlog">
+                    <h3>Langages</h3>
+                    <img src="../Images/WhoamI/Logo HTML5.png" alt="HTML5">
+                    <img src="../Images/WhoamI/Logo CSS3.png" alt="CSS3">
+                    <img src="../Images/WhoamI/Logo JavaScript.png" alt="JS">
+                    <img src="../Images/WhoamI/Logo Python.png" alt="Python">
+                </div>
+            </div>
         </div>
 
     </body>
