--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -40,12 +40,17 @@
         <div class="bandeau" id="b-contact">
             <h2>Contact</h2>
         </div>
+        <div class="back-card">
+
+        </div>
         <!-- FIN CONTACT -->
 
-    <footer class="foot">
-        <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
-        <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
-    </footer>
+        <footer class="foot">
+            <a href="../Pages/whoami.html">
+                <h4>Qui suis-je ?</h4>
+            </a>
+            <h4>Pauline Pierson - Tout droit réservé - <a href="../Pages/mention.html">Mentions légales</a></h4>
+        </footer>
 
 </div>
 
