--- a/Pages/mention.html
+++ b/Pages/mention.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,27 +13,46 @@
 <div class="container">
 
     <body>
+        <!-- HEADER -->
         <div class="header">
             <div class="PP">
-                <a href="../index.html"><h1>Pauline Pierson</h1></a>
+                <a href="../index.html">
+                    <h1>Pauline Pierson</h1>
+                </a>
             </div>
             <div class="onglet">
                 <div class="rond" id="print">
-                    <a href="../Pages/print.html"><h3>Print</h3></a>
+                    <a href="../Pages/print.html">
+                        <h3>Print</h3>
+                    </a>
                 </div>
                 <div class="rond" id="web">
-                    <a href="../Pages/web.html"><h3>Web</h3></a>
+                    <a href="../Pages/web.html">
+                        <h3>Web</h3>
+                    </a>
                 </div>
                 <div class="rond" id="contact">
-                    <a href="../Pages/contact.html"><h3>Contact</h3></a>
+                    <a href="../Pages/contact.html">
+                        <h3>Contact</h3>
+                    </a>
                 </div>
             </div>
         </div>
+        <!-- FIN HEADER -->
+        <!-- MENTION -->
+        <div class="bandeau" id="b-f">
+            <h2>Mentions légales</h2>
+        </div>
+        <div class="back-f">
+        </div>
+        <!-- FIN MENTION -->
     </body>
 
     <footer class="foot">
-        <a href="../Pages/whoami.html"><h4>Qui suis-je ?</h4></a>
-        <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
+        <a href="../Pages/whoami.html">
+            <h4>Qui suis-je ?</h4>
+        </a>
+        <h4>Pauline Pierson - Tout droit réservé - <a href="../Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
