--- a/Pages/whoami.html
+++ b/Pages/whoami.html
@@ -39,6 +39,7 @@
             </div>
         </div>
         <!-- FIN HEADER -->
+        <!-- ME -->
         <div class="bandeau" id="b-f">
             <h2>Qui suis-je ?</h2>
         </div>
@@ -47,7 +48,8 @@
                 <div class="col">
                     <h3>Présentation</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda, fuga.</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque ipsum porro nemo laudantium, animi accusantium voluptate cumque vero eum!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas atque ipsum porro nemo
+                        laudantium, animi accusantium voluptate cumque vero eum!</p>
                     <div class="row center">
                         <div class="col">
                             <a href="https://www.linkedin.com/in/pauline-pierson-2838a855/" target="_blank">
@@ -94,6 +96,7 @@
                 </div>
             </div>
         </div>
+        <!-- FIN ME -->
 
     </body>
 
@@ -101,7 +104,7 @@
         <a href="../Pages/whoami.html">
             <h4>Qui suis-je ?</h4>
         </a>
-        <h4>Pauline Pierson - Tout droit réservé - Mentions légales</h4>
+        <h4>Pauline Pierson - Tout droit réservé - <a href="../Pages/mention.html">Mentions légales</a></h4>
     </footer>
 
 </div>
